[package]
name = "mfqp"
version = "0.1.0"
authors = ["Deep Majumder <deep.majumder2019@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
curl = "0.4.29"
sublime_fuzzy = "0.6.0"
termcolor = "1.1.0"
atty = "0.2.14"