[package]
name = "mfqp"
version = "0.1.0"
authors = ["Deep Majumder <deep.majumder2019@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
sublime_fuzzy = "0.7.0"
termcolor = "1.1.0"
atty = "0.2.14"
regex = "1"
reqwest = { version = "0.11.10", features = ["blocking"] }
tokio = { version = "1.18.2", features = ["full"] }
dirs = "4.0.0"